--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<style type="text/css">
 			body
 				{
-					background-color: #f6f6f6;
+					background-color: #dddddd;
 					font-family: "Arial Black", Gadget, sans-serif;
 				}
 			#main
@@ -18,7 +18,7 @@
 					margin-left: auto;
 					margin-right: auto;
 					border-radius: 15px;
-					background-color: #cbcbc1;
+					background-color: #bbbbbb;
 				}
 			#header
 				{
@@ -68,7 +68,7 @@
 					margin-left: auto;
 					margin-right: auto;
 					border-radius: 15px;
-					background-color: #b6aea1;
+					background-color: #aaaaaa;
 				}
 			.specialTable
 				{
@@ -107,3 +107,4 @@
 		</div>
 	</body>
 </html>
+<!-- Built Tue Apr 22 22:33:30 PDT 2014 on mansellm-laptop -->
