--- a/vinyl.html
+++ b/vinyl.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 	<head>
-		<title>In-Stock Vinyl Specials | Vallejo Floor Company Discount Flooring</title>
+		<title>Vallejo Floor Company Discount Flooring</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<style type="text/css">
 			body
 				{
-					background-color: #f6f6f6;
+					background-color: #dddddd;
 					font-family: "Arial Black", Gadget, sans-serif;
 				}
 			#main
@@ -18,7 +18,7 @@
 					margin-left: auto;
 					margin-right: auto;
 					border-radius: 15px;
-					background-color: #cbcbc1;
+					background-color: #bbbbbb;
 				}
 			#header
 				{
@@ -68,7 +68,7 @@
 					margin-left: auto;
 					margin-right: auto;
 					border-radius: 15px;
-					background-color: #b6aea1;
+					background-color: #aaaaaa;
 				}
 			.specialTable
 				{
@@ -99,3 +99,4 @@
 		</div>
 	</body>
 </html>
+<!-- Built Tue Apr 22 22:33:30 PDT 2014 on mansellm-laptop -->
